Bug 334675 r=darin a=mconnor Notify users on async IO errors